APP-3590 Fix dark mode

--- a/stories/stories.scss
+++ b/stories/stories.scss
@@ -39,3 +39,9 @@ html {
     background-color: #3e4249;
     color: #eaebec;
 }
+
+.dark {
+    pre {
+        background-color: #161B22;
+    }
+}
